--- a/MiJennerConfigUtilsFolderManager/MiJennerConfigUtilsFolderManager.csproj
+++ b/MiJennerConfigUtilsFolderManager/MiJennerConfigUtilsFolderManager.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -6,5 +6,9 @@
     <Nullable>enable</Nullable>
     <RootNamespace>MiJenner.ConfigUtils</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\FileUtils\MiJennerFileUtils\MiJennerFileUtils\MiJennerFileUtils.csproj" />
+  </ItemGroup>
 
 </Project>
